--- a/kafka-bundle/docker-compose.yml
+++ b/kafka-bundle/docker-compose.yml
@@ -11,11 +11,11 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: {{HOST IP}}
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.2.110
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
   kafka-manager:  
     image: sheepkiller/kafka-manager
     environment:
-        ZK_HOSTS: {{HOST IP}}
+        ZK_HOSTS: 192.168.2.110
     ports:  
-      - "9000:9000"
+      - "9001:9000"
